RESOLVED FIXED181250
Cancel pending script loads when service worker is being terminated
https://bugs.webkit.org/show_bug.cgi?id=181250
Summary Cancel pending script loads when service worker is being terminated
youenn fablet
Reported 2018-01-03 09:36:13 PST
Currently, service worker proxy is deleted when stopping the service worker, which is different from regular workers. This requires stopping all ongoing loads, including worker script loads.
Attachments
Patch (4.46 KB, patch)
2018-01-03 09:39 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-01-03 09:39:30 PST
WebKit Commit Bot
Comment 2 2018-01-04 00:26:05 PST
Comment on attachment 330395 [details] Patch Clearing flags on attachment: 330395 Committed r226398: <https://trac.webkit.org/changeset/226398>
WebKit Commit Bot
Comment 3 2018-01-04 00:26:07 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-01-04 00:27:39 PST
Note You need to log in before you can comment on or make changes to this bug.